--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,37 @@
 body {
   background: #3e91c1;
+  text-align: center;
+}
+
+.title {
+  color: rgb(6, 7, 59);
+  padding-top: 5%;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-weight: bold;
+  font-size: 5em;
+}
+
+.author {
+  color: bisque;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 2em;
+}
+
+@media only screen and (max-width: 600px) {
+  .title {
+    color: indigo;
+    padding-top: 5%;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
+    font-weight: bold;
+    font-size: 2em;
+  }
+
+  .author {
+    color: bisque;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    font-size: 1em;
+  }
 }
